[package]
name = "key_swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
global-hotkey = "0.5.1"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi"] }
winit = "0.29.15"
